Stop long code block lines from wrapping in Safari

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,6 @@ body {
   margin: 0 auto;
   max-width: 40em;
   padding: 0 1em;
-  overflow-wrap: break-word;
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 1.25em 0 0.5em 0;
